Changes:

v${project.version} (Changeset: ${changeSet}):
	    - Project migration: Ant -> Maven
            - Project migration: Subversion -> Mercurial
            - License upgraded: SPL -> CDDL
            - lib project restructured
            - org.softsmithy.lib.io.Streams.copy(Reader, Writer) added
            - org.softsmithy.lib.util.EqulatiyVerifier framework replaced with -> org.softsmithy.lib.util.Matcher framework
            - small fixes

v20100524:  - org.softsmithy.lib.io.Files: new utility methods
(Rev.: 470) - org.softsmithy.lib.util.zip.ZipFiles: bug fix
            - org.softsmithy.lib.persistence.AbstractEntity class added
            - org.softsmithy.lib.persistence.ExtendedBaseDAO class added
            - org.softsmithy.lib.persistence.GenericDAO class added
            - org.softsmithy.lib.persistence.ResourceLocalTransactionController class added
            - org.softsmithy.lib.swing.LocaleCellRenderer: supports LocaleLocalizer
            - org.softsmithy.lib.swing.CellRenderer: icon support added
            - org.softsmithy.lib.swing.XDefaultListCellRenderer: icon support added
            - org.softsmithy.lib.swing.JFileRootComboBox class added
            - org.softsmithy.lib.swing.JFileRootList class added
            - org.softsmithy.lib.swing.filechooser.FileRootComboBoxModel class added
            - org.softsmithy.lib.swing.filechooser.FileRootCellRenderer class added
            - org.softsmithy.lib.text.LocaleLocalizer class added
            - org.softsmithy.lib.text.Localizable class added
            - org.softsmithy.lib.text.Localizables class added
            - org.softsmithy.lib.text.Localizer class added
            - org.softsmithy.lib.util.Locales: new utility method
            - org.softsmithy.lib.util.Locales: many methods moved to org.softsmithy.lib.text.Localizables
            - org.softsmithy.lib.util.CountryCode class added